--- a/home.css
+++ b/home.css
@@ -1,6 +1,15 @@
-.títuloPrinc{
-    padding-left: 20px;
-}
+<header>
+            <div class="caixa">
+                <h1><img src="img/logo.png"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 #banner{
     width: 100%;
 }
